fix: changed scrollbar color

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -20,10 +20,10 @@ body {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #f5095f;
+  background: #ff5101;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #ff77a9;
+  background: #ffb08b;
 }
